# c-examples

./: CMakeLists.txt
hearts/: Makefile
hearts/src/: client.cpp  common.cpp  common.h  exceptions.hpp  main.cpp  server.cpp  test_server.cpp
hearts/src/GameEngine/: Card.cpp  Card.h  GameEngine.cpp  GameEngine.h  Player.cpp  Player.h  Rules.h  Seat.cpp  Seat.h  Trick.h
hearts/src/connection/: Connection.cpp  Connection.h  IPEndpoint.cpp  IPEndpoint.h  IPVersion.h  PacketManager.cpp  PacketManager.h  Socket.cpp  Socket.h
hearts/src/connection/packets/: Busy.hpp  Deal.hpp  InvalidPacket.hpp  Packet.h  PacketType.h  PacketsInclude.h  Score.hpp  TakePlace.hpp  Taken.hpp  Total.hpp  TrickPacket.hpp  Wrong.hpp
hearts/src/utils/: client_options.cpp  client_options.h  parser.cpp  parser.h  server_options.cpp  server_options.h
src/: GameState.cpp  GameState.h  main.cpp
src/Exceptions/: InvalidGameStateException.h  InvalidPlayerDecisionException.h
src/GameEngine/: Card.cpp  Card.h  Decision.h  Deck.cpp  Deck.h  GameEngine.h  Hand.h
src/GameEngine/Player/Strategy/: IStrategy.h  InteractiveStrategy.cpp
src/GameEngine/Player/Strategy/CombinedStrategy/: CombinedStrategy.cpp
src/GameEngine/Player/Strategy/CombinedStrategy/FirstRound/: FirstRoundFullRandom.cpp  FirstRoundFullRandom.h  FirstRoundNaive.cpp  FirstRoundNaive.h  FirstRoundOptimal.h  FirstRoundStrategy.cpp
src/GameEngine/Player/Strategy/CombinedStrategy/SecondRound/: SecondRoundNaive.cpp  SecondRoundStrategy.cpp  SecondRoundStrategy.h
src/GameEngine/Player/Strategy/CombinedStrategy/ThirdRound/: ThirdRoundNaive.h  ThirdRoundOptimal.h  ThirdRoundStrategy.h
src/Reporter/: GameReport.cpp  GameReport.h  Reporter.cpp  Reporter.h
src/Visualizer/: Visualizer.cpp  Visualizer.h
surfaces/: Makefile  example.cc  ps_plot.cc  ps_plot.h  surfaces.h
template-project/: Makefile  example.cc  invoke_intseq.h
test/: CardTest.cpp  DeckTest.cpp  FirstRoundOptimalTest.cpp  NaiveStrategyTest.cpp
tramway/src/: CMakeLists.txt  GameRules.h
tramway/src/Exceptions/: EmptyDeckException.h
tramway/src/GameEngine/: GameEngine.cpp  Hand.cpp
tramway/src/GameEngine/Player/: Player.cpp  Player.h
tramway/src/GameEngine/Player/Strategy/: InteractiveStrategy.h
tramway/src/GameEngine/Player/Strategy/CombinedStrategy/: CombinedStrategy.h
tramway/src/GameEngine/Player/Strategy/CombinedStrategy/FirstRound/: FirstRoundOptimal.cpp  FirstRoundStrategy.h
tramway/src/GameEngine/Player/Strategy/CombinedStrategy/SecondRound/: SecondRoundNaive.h
tramway/src/GameEngine/Player/Strategy/CombinedStrategy/ThirdRound/: ThirdRoundNaive.cpp  ThirdRoundOptimal.cpp
tramway/test/: CMakeLists.txt  HandTest.cpp
